# lucid-insights

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lucid_insights/: __init__.py  cache.py  claude_client.py  cli.py  diff.py  grouping.py  models.py  prompts.py  renderer.py
src/lucid_insights/templates/: github_comment.md.j2  report.md.j2  slack.md.j2
tests/: conftest.py  test_cache.py  test_claude_client.py  test_cli.py  test_diff.py  test_grouping.py  test_renderer.py
tests/fixtures/: sample_audit.json
